--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <body>
     <h1>Página de Jesus</h1>
     <p>Turma: 1I - Número: 100</p>
-    <p>Baixar o código e editar</p>
+   
+    <div  class="caixa1">
+      Caixa 1
+    </div>
+
+    <div  class="caixa2">
+      Caixa 2
+    </div>
+
   </body>
 </html>
