--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
               <li><a href="pagina02.html">Página 02</a></li>
           </ul>
       </nav>
-  </div>
-  
-    <h1>Página de Jesus</h1>
-    <p>Turma: 1I - Número: 100</p>
-   
-    <div  class="caixa1">
-      Caixa 1
+    </div>
+    <div class="conteudo">
+        <h1>Gastão Vidigal - Novo Ensino Médio</h1>
+
+        <h2>Primeiro Ano do Novo Ensino Médio</h2>
     </div>
 
-    <div  class="caixa2">
-      Caixa 2
+    <div class="rodape">
+      <!-- Colocar Nome número e série -->
     </div>
 
   </body>
