--- a/pagina01.html
+++ b/pagina01.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="logoGastao">
-        <img height="100px" width="120px" src="aguia.gif" alt="">
+  <div class="logoGastao">
+    <img height="100px" width="120px" src="aguia.gif" alt="">
+  </div>
+  <div class="menuPrincipal">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina01.html">CHL</a></li>
+        <li><a href="pagina02.html">CNM</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="constudoAnual">
+    <div class="conteudo">
+      <h1>Ciências Humanas e Linguagens</h1>
+      <div class="formacao">
+        <img src="linguagem.png" alt="">
       </div>
-      <div class="menuPrincipal">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pagina01.html">Primeiro Ano</a></li>
-                <li><a href="pagina02.html">Segundo Ano</a></li>
-                <li><a href="pagina03.html">Terceiro Ano</a></li>
-            </ul>
-        </nav>
-     </div>
-     <div class="conteudo">
-        <h1>Primeiro Ano</h1>
-
-
-     </div>
+    </div>
+  </div>
 </body>
 </html>
