--- a/pagina02.html
+++ b/pagina02.html
@@ -8,23 +8,27 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <div class="logoGastao">
-        <img height="100px" width="120px" src="aguia.gif" alt="">
-      </div>  
-      <div class="menuPrincipal">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pagina01.html">Primeiro Ano</a></li>
-                <li><a href="pagina02.html">Segundo Ano</a></li>
-                <li><a href="pagina03.html">Terceiro Ano</a></li>
-            </ul>
-        </nav>
-     </div>
-     <div class="conteudo">
-        <h1>Segundo Ano</h1>
-
-        
-     </div>
-</body>
+  <div class="logoGastao">
+    <img height="100px" width="120px" src="aguia.gif" alt="">
+  </div>
+  <div class="menuPrincipal">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pagina01.html">CHL</a></li>
+        <li><a href="pagina02.html">CNM</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
+<div class="constudoAnual">
+  
+  <div class="conteudo">
+    <h1>Ciências da Natureza e Matemática</h1>
+    <div class="formacao">
+      <img src="ciencias.png" alt="">
+    </div>
+  </div>
+</div>
+ </body>
 </html>
